Bottom view in web cart view

--- a/assets/languages/en.json
+++ b/assets/languages/en.json
@@ -1,18 +1,17 @@
 {
-  "userName": "User Name",
-  "password": "Password",
-  "login": "Login",
-  "login/signup": "Log In/ Sign Up",
-  "sellerOnCubesnack": "Seller on Cubesnack",
-  "registerAsFreelancer": "Register as freelancer",
-  "homeOrders": "Home Orders",
-  "buyAgain": "Buy Again",
-  "signup": "Signup",
-  "favourite": "Favourite",
-  "today'sDeal": "Today's Deal",
-  "letsgetStarted": "Let's get started",
-  "createAnAccount": "Create an account with your email or your social account.",
-  "recommendedForYou": "Recommended for you",
+    "userName": "User Name",
+    "password": "Password",
+    "login": "Login",
+    "sellerOnCubesnack": "Seller on Cubesnack",
+    "registerAsFreelancer": "Register as freelancer",
+    "homeOrders": "Home Orders",
+    "buyAgain": "Buy Again",
+    "signup": "Signup",
+    "favourite": "Favourite",
+    "today'sDeal": "Today's Deal",
+    "letsgetStarted": "Let's get started",
+    "createAnAccount": "Create an account with your email or your social account.",
+    "recommendedForYou": "Recommended for you",
     "tournaments": "Tournaments",
     "played": "Played",
     "won": "Won",
@@ -129,10 +128,21 @@
     "payNow" : "Pay Now",
     "orderDetails":"Order Details",
     "manageReturns":"Manage Returns",
-    "opt":"OTP",
+    "otp":"OTP",
     "":"",
     "returnRequest":"Return request",
     "startDate": "Start Date",
-    "endDate": "End Date"
+    "endDate": "End Date",
+    "freelancerSignup":"Freelancer(signup)",
+    "validateFName":"Please enter valid First Name",
+    "validateLName":"Please enter valid Last Name",
+    "validateState":"Please select valid State",
+    "validateDesc":"Please enter valid Description",
+    "validateProfile":"Please select valid Profile Picture",
+    "addMore":"Add More",
+    "verifyByYourPhoneNumber":"Verify by your phone number",
+    "continueAndCreatYourFirstGig":"Continue and creat your first gig",
+    "tryAgain": "Try Again",
+    "notifications":"Notifications"
 
 }
